# pi_off

./: Cargo.toml  LICENSE  install  readme.md
src/: main.rs
systemd/: pi_off.service
